--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     </head>
     <body>
 
-    <script type="text/javascript" src="world wrap.js">
-
-   
-    </script>
+    <script type="text/javascript" src="src/Enemy.js"></script>
+    <script type="text/javascript" src="world wrap.js"></script>
 
     </body>
 </html>
