--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
 
     <script type="text/javascript" src="src/Enemy.js"></script>
+    <script type="text/javascript" src="src/LifeBar.js"></script>
     <script type="text/javascript" src="world wrap.js"></script>
 
     </body>
