ajout des armes

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
-        <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+        <title>Algo Jeu</title>
     </head>
     <body>
+	    <div id="game"></div>
 
-    <script type="text/javascript" src="src/Enemy.js"></script>
-    <script type="text/javascript" src="src/LifeBar.js"></script>
-    <script type="text/javascript" src="world wrap.js"></script>
-
+	    <script type="text/javascript" src="src/phaser.min.js"></script>
+	    <script type="text/javascript" src="src/Enemy.js"></script>
+	    <script type="text/javascript" src="src/LifeBar.js"></script>
+	    <script type="text/javascript" src="src/Bullet.js"></script>
+	    <script type="text/javascript" src="src/Weapon.js"></script>
+	    <script type="text/javascript" src="src/main.js"></script>
     </body>
 </html>
