ajout de tirs pour les ennemies

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	    <script type="text/javascript" src="src/LifeBar.js"></script>
 	    <script type="text/javascript" src="src/Bullet.js"></script>
 	    <script type="text/javascript" src="src/Weapon.js"></script>
+	    <script type="text/javascript" src="src/EnemyWeapon.js"></script>
 	    <script type="text/javascript" src="src/main.js"></script>
     </body>
 </html>
