--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	    <div id="game"></div>
 
 	    <script type="text/javascript" src="src/phaser.min.js"></script>
+	    <script type="text/javascript" src="src/Player.js"></script>
 	    <script type="text/javascript" src="src/Enemy.js"></script>
 	    <script type="text/javascript" src="src/LifeBar.js"></script>
 	    <script type="text/javascript" src="src/Bullet.js"></script>
 	    <script type="text/javascript" src="src/Weapon.js"></script>
 	    <script type="text/javascript" src="src/EnemyWeapon.js"></script>
+	    <script type="text/javascript" src="src/Token.js"></script>
 	    <script type="text/javascript" src="src/main.js"></script>
     </body>
 </html>
