Ajout du générateur d'arbre
Ajout générateur d'arbre

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 	    <script type="text/javascript" src="src/Weapon.js"></script>
 	    <script type="text/javascript" src="src/EnemyWeapon.js"></script>
 	    <script type="text/javascript" src="src/Token.js"></script>
+	    <script type="text/javascript" src="src/SimpleGraph/AbstractSimpleGraph.js"></script>
+	    <script type="text/javascript" src="src/NodeIterator/AbstractNodeIterator.js"></script>
+	    <script type="text/javascript" src="src/Node/AbstractNode.js"></script>
+	    <script type="text/javascript" src="src/Node/Node.js"></script>
+	    <script type="text/javascript" src="src/NodeIterator/NodeIterator.js"></script>
+	    <script type="text/javascript" src="src/SimpleGraph/SimpleGraph.js"></script>
+	    <script type="text/javascript" src="src/SimpleGraph/GameGraph.js"></script>
+	    <script type="text/javascript" src="src/Error/Exceptions.js"></script>
 	    <script type="text/javascript" src="src/main.js"></script>
     </body>
 </html>
