--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Algo Jeu</title>
     </head>
     <body>
+    	<div id="info" style="text-transform:uppercase;text-align:center;width:800px;font-size:20px"></div>
 	    <div id="game"></div>
 	    <canvas id="graph" width="800" height="800"></canvas>
 
