--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<script type="text/javascript" src="./src/Model/SubjectGraph.js"></script>
 		<script type="text/javascript" src="./src/Model/ConcreteGraph.js"></script>
 
+
 		<!-- Inclusion des vues texte/graphique -->
 		<script type="text/javascript" src="./src/Views/AbstractView.js"></script>
 		<script type="text/javascript" src="./src/Views/nodeGraphView.js"></script>
@@ -48,6 +49,9 @@
 	    <script type="text/javascript" src="src/Bullet.js"></script>
 	    <script type="text/javascript" src="src/Weapon.js"></script>
 	    <script type="text/javascript" src="src/Token.js"></script>
+			<!--Inclusion du calcul d'arbre -->
+			<script type="text/javascript" src="src/CalculateTree.js"></script>
 	    <script type="text/javascript" src="src/main.js"></script>
+
     </body>
 </html>
